Fix header z-index in Options page

--- a/src/options.css
+++ b/src/options.css
@@ -40,6 +40,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 1;
 }
 
 header .column {
